Fixed UI bug on mobile
- Fixed responsive sidebar bug introduced by previous bug fix

--- a/web/www/assets/styles.css
+++ b/web/www/assets/styles.css
@@ -1303,6 +1303,7 @@ p {
 
   .toggle .icon {
     position: relative;
+    right: 0;
     display: block;
     z-index: 999;
     margin-top: 10px;
